k8s/cms-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: cms
spec:
  ports:
  - port: 80
    targetPort: 3000
  selector:
    app: cms
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cms
spec:
  selector:
    matchLabels:
      app: cms
  replicas: 1
  template:
    metadata:
      labels:
        app: cms
    spec:
      containers:
      - name: cms
        image: registry.digitalocean.com/hs-image-repo/crypto-mon
        ports:
        - containerPort: 3000
