k8s/cms-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cms
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
  - hosts:
    - cms.bankwallet.app
    secretName: letsencrypt-prod
  rules:
  - host: cms.bankwallet.app
    http:
      paths:
      - backend:
          serviceName: cms
          servicePort: 80
